--- a/WhatToDo/WhatToDo/Views/Pages/MainPage.xaml
+++ b/WhatToDo/WhatToDo/Views/Pages/MainPage.xaml
@@ -11,6 +11,8 @@
 
 
     <ContentPage.ToolbarItems>
+
+
         <ToolbarItem 
             Command="{Binding FilterSelectorCommand}" 
             IsEnabled="{Binding IsNotBusy}"
@@ -32,40 +34,58 @@
             </ToolbarItem.IconImageSource>
         </ToolbarItem>
     </ContentPage.ToolbarItems>
-    
+
     <Grid 
         ColumnDefinitions="*,*"
-        ColumnSpacing="1"
-        RowDefinitions="*,Auto"
-        Margin="5">
-        
-        <RefreshView 
+        RowDefinitions="*,*"
+        IsClippedToBounds="True"
+        HorizontalOptions="FillAndExpand"
+        VerticalOptions="FillAndExpand">
+        <Grid.Shadow>
+            <Shadow
+                Brush="Black"
+                Opacity="0.8"
+                Radius="30"/>
+        </Grid.Shadow>
+
+        <StackLayout
             Grid.ColumnSpan="2"
-            IsRefreshing="{Binding IsRefreshing}"
-            Command="{Binding RefreshCommand}" >
-            
-            <VerticalStackLayout 
-                Grid.ColumnSpan="3" 
-                Grid.RowSpan="3" 
-                Opacity="{Binding Blur}"  >
-               
-                <HorizontalStackLayout Spacing="12" Margin="10" HorizontalOptions="Center">
-                    <Label Text="{Binding Header}" Style="{StaticResource SwipeLabel}" FontSize="30"/>
-                    <Label Text="{Binding Filter}" Style="{StaticResource SwipeLabel}" FontSize="30"/>
-                </HorizontalStackLayout>
+            Grid.RowSpan="2"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand"
+            Background="Transparent"
+            IsClippedToBounds="True"
+            Opacity="1">
+            <RefreshView 
+                IsRefreshing="{Binding IsRefreshing}"
+                Command="{Binding RefreshCommand}"
+                Opacity="{Binding Blur}"
+                Background="Transparent" 
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand"
+                IsClippedToBounds="True">
 
                 <CollectionView 
                 ItemsSource="{Binding DisplayItems}"
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand"
                 SelectionMode="None"
                 Opacity="{Binding Blur}">
-                    
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:IndexedToDoItem">
-                        <SwipeView Margin="5" >
-                            <SwipeView.LeftItems>
-                                <SwipeItems
+                    <CollectionView.Header >
+                        <Grid Background="{StaticResource DarkAreaCardColor}" HorizontalOptions="FillAndExpand">
+                            <VerticalStackLayout Padding="0,5,0,10">
+                                <Label Text="{Binding Header}" Style="{StaticResource SwipeLabel}" FontSize="30"/>
+                                <Label Text="{Binding Filter}" Style="{StaticResource SwipeLabel}" FontSize="20"/>
+                            </VerticalStackLayout>
+                        </Grid>
+                    </CollectionView.Header>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="model:IndexedToDoItem">
+                            <SwipeView Margin="5" HorizontalOptions="Center" Padding="0,0,0,0">
+                                <SwipeView.LeftItems>
+                                    <SwipeItems
                                     SwipeBehaviorOnInvoked="Auto">
-                                    <SwipeItemView
+                                        <SwipeItemView
                                         CommandParameter="{Binding .}"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type vm:MainViewModel}}, Path=ToggoleCompleteCommand}"
                                         IsEnabled="{Binding Source={RelativeSource AncestorType={x:Type vm:MainViewModel}}, Path=IsNotBusy}">
@@ -82,43 +102,43 @@
                                                 </Border>
                                             </Grid>
 
-                                    </SwipeItemView>
-                                </SwipeItems>
-                            </SwipeView.LeftItems>
-                            <SwipeView.RightItems>
-                                <SwipeItems 
+                                        </SwipeItemView>
+                                    </SwipeItems>
+                                </SwipeView.LeftItems>
+                                <SwipeView.RightItems>
+                                    <SwipeItems 
                                     SwipeBehaviorOnInvoked="Auto">
-                                    <SwipeItemView
+                                        <SwipeItemView
                                         CommandParameter="{Binding .}"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type vm:MainViewModel}}, Path=DeleteCommand}"
                                         IsEnabled="{Binding Source={RelativeSource AncestorType={x:Type vm:MainViewModel}}, Path=IsNotBusy}">
-                                        <Grid Padding="3,15">
-                                            <Border Style="{StaticResource ShadowedBorder}">
-                                                <Frame Style="{StaticResource DeleteSwipe}">
-                                                    <Label Style="{StaticResource SwipeLabel}" Text="Delete"/>
-                                                </Frame>
-                                            </Border>
-                                        </Grid>
-                                    </SwipeItemView>
-                                </SwipeItems>
-                            </SwipeView.RightItems>
-                            <Grid 
-                                Padding="1,5">
-                                <Border                                    
+                                            <Grid Padding="3,15">
+                                                <Border Style="{StaticResource ShadowedBorder}">
+                                                    <Frame Style="{StaticResource DeleteSwipe}">
+                                                        <Label Style="{StaticResource SwipeLabel}" Text="Delete"/>
+                                                    </Frame>
+                                                </Border>
+                                            </Grid>
+                                        </SwipeItemView>
+                                    </SwipeItems>
+                                </SwipeView.RightItems>
+                                <Grid 
+                                Padding="7,5">
+                                    <Border                                    
                                     Style="{StaticResource ShadowedBorder}">
-                                    <Frame 
+                                        <Frame 
                                         Style="{StaticResource CardView_TodoItem}"
                                         Margin="0"
                                         HorizontalOptions="Fill"
                                         VerticalOptions="Fill">
-                                        <Frame.GestureRecognizers>
-                                            <TapGestureRecognizer 
+                                            <Frame.GestureRecognizers>
+                                                <TapGestureRecognizer 
                                                 NumberOfTapsRequired="1" 
                                                 CommandParameter="{Binding .}"
                                                 Command="{Binding Source={RelativeSource AncestorType={x:Type vm:MainViewModel}}, Path=TapCommand}"/>
-                                        </Frame.GestureRecognizers>
-                                        <Grid Padding="0" ColumnDefinitions="100,*">
-                                            <Border 
+                                            </Frame.GestureRecognizers>
+                                            <Grid Padding="0" ColumnDefinitions="100,*">
+                                                <Border 
                                                 Style="{StaticResource CircleBorderGlowShadow}"
                                                 Grid.Column="0"
                                                 Stroke="Transparent"
@@ -126,7 +146,7 @@
                                                 BackgroundColor="{Binding Value.Color}"
                                                 Padding="10,16"
                                                 Margin="5">
-                                                <Label 
+                                                    <Label 
                                                     Style="{StaticResource SwipeLabel}"
                                                     Text="{Binding Id}" 
                                                     Margin="3"
@@ -137,47 +157,57 @@
                                                     TextColor="{StaticResource PaleWhite}"
                                                     HorizontalTextAlignment="Center"
                                                     VerticalTextAlignment="Center"/>
-                                            </Border>
-                                            <VerticalStackLayout 
+                                                </Border>
+                                                <VerticalStackLayout 
                                                 Spacing="3" 
                                             Grid.Column="1"
                                             Padding="10">
                                                     <Label Text="{Binding Value.Name}" Margin="1" FontSize="16" FontAttributes="Bold" TextColor="{StaticResource TileTitleFont}" />
-                                                <Label 
+                                                    <Label 
                                                     Text="{Binding Value.DueDate, StringFormat='{0:ddd  d-MMM-yyyy  H:mm tt}'}" 
                                                     IsVisible="{Binding Value.HasDueDate}" 
                                                     FontAttributes="Bold" FontSize="11" TextColor="{StaticResource TileTitleSubFont}" />
                                                     <Label Text="{Binding Value.Description}" FontSize="11" TextColor="{StaticResource TileTitleSubFont}"/>
-                                            </VerticalStackLayout>
-                                        </Grid>
-                                    </Frame>
-                                </Border>
-                            </Grid>
-                        </SwipeView>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-            </VerticalStackLayout>
-        </RefreshView>
+                                                </VerticalStackLayout>
+                                            </Grid>
+                                        </Frame>
+                                    </Border>
+                                </Grid>
+                            </SwipeView>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                    <CollectionView.Footer>
+                        <Grid ColumnDefinitions="*,*">
+                            <Button 
+                            Grid.Row="1" 
+                            Grid.Column="0" 
+                            Margin="8"
+                            Style="{StaticResource MainAppButton}"
+                            Text="Incomplete"
+                            FontSize="22"
+                            Command="{Binding ToggleIncompleteTasksCommand}" 
+                            CommandParameter="Incomplete"
+                            IsEnabled="{Binding IsNotBusy}"/>
+                            <Button 
+                            Grid.Row="1" 
+                            Grid.Column="1" 
+                            Margin="8"
+                            Style="{StaticResource MainAppButton}"
+                            Text="Completed"
+                            FontSize="22"
+                            Command="{Binding ToggleIncompleteTasksCommand}"  
+                            CommandParameter="Completed"           
+                            IsEnabled="{Binding IsNotBusy}"/>
+                        </Grid>
 
-        <Button 
-            Grid.Row="1" 
-            Grid.Column="0" 
-            Margin="8"
-            Style="{StaticResource MainAppButton}"
-            Text="Refresh"
-            FontSize="22"
-            Command="{Binding RefreshCommand}"             
-            IsEnabled="{Binding IsNotBusy}"/>
-        <Button 
-            Grid.Row="1" 
-            Grid.Column="1" 
-            Margin="8"
-            Style="{StaticResource MainAppButton}"
-            Text="Get Data"
-            FontSize="22"
-            Command="{Binding GetItemsCommand}"             
-            IsEnabled="{Binding IsNotBusy}"/>
+                    </CollectionView.Footer>
+                </CollectionView>
+            </RefreshView>
+        </StackLayout>
+
+
+
+
         <ActivityIndicator
             Grid.RowSpan="2"
             Grid.ColumnSpan="2"
@@ -186,7 +216,7 @@
             IsVisible="{Binding IsBusy}"
             VerticalOptions="CenterAndExpand" />
 
-        <!-- Filter Popup -->                
+        <!-- Filter Popup -->
         <Border
             Grid.ColumnSpan="2"
             Grid.RowSpan="2"
