--- a/WhatToDo/WhatToDo/Views/Pages/WeatherPage.xaml
+++ b/WhatToDo/WhatToDo/Views/Pages/WeatherPage.xaml
@@ -6,10 +6,39 @@
              x:DataType="vm:WeatherViewModel"
              x:Class="WhatToDo.Views.Pages.WeatherPage"
              Title="WeatherPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    
+    
+    <VerticalStackLayout 
+        Margin="5">
+        <Label Text="Weather Info" Style="{StaticResource SwipeLabel}" FontSize="22"/>
+
+        <CollectionView 
+            ItemsSource="{Binding DisplayWeather}"
+            SelectionMode="None" >
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:WeatherData">
+                    <Frame Style="{StaticResource CardView_TodoItem}" Margin="7" Padding="5,5,5,5" >
+                        <VerticalStackLayout >
+                            <Label Text="{Binding name}" Style="{StaticResource ToDoItemLabel}"/>
+                            <Label Text="{Binding startTime}" Style="{StaticResource ToDoItemLabel}"/>
+                            <Label Text="{Binding shortForecast}" Style="{StaticResource ToDoItemLabel}"/>
+                        </VerticalStackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+
+        <Button 
+            Grid.Row="1" 
+            Grid.Column="1" 
+            Margin="8"
+            Style="{StaticResource MainAppButton}"
+            Text="Show Weather"
+            FontSize="22"
+            Command="{Binding ShowWeatherCommand}"             
+            IsEnabled="{Binding IsNotBusy}"/>
+
     </VerticalStackLayout>
+    
 </ContentPage>
